fix(MarketCardActions): use start align

--- a/src/styles/components/_market-card.scss
+++ b/src/styles/components/_market-card.scss
@@ -182,7 +182,7 @@
     }
 
     &__actions {
-      @include flex-row(flex-end, end, 1.2rem);
+      @include flex-row(flex-end, flex-start, 1.2rem);
       padding-top: 0.3rem;
     }
   }
